@startuml Cars

class Car{

}

class ElectricCar{

}

class PetrolCar{

}

class HybridCar{

}

Car <|.down. ElectricCar
Car <|.down. PetrolCar

ElectricCar <|-down- HybridCar
PetrolCar <|-down- HybridCar

class ElectricEngine{

}

class PetrolEngine{

}

PetrolEngine <-up-PetrolCar
ElectricEngine <-up-ElectricCar
@enduml
